--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<div class="car-info"><h3>Ашкудишка Личи 300 тяг</h3><p>Шедевр инженерии со встроенным кальяном вместо подстаканников.</p>
-        <div class="price">$300,000</div></div>
+png" alt="Ашкудишка Личи 300 тяг">
+          <div class="smoke"></div>
+        </div>
+        <div class="car-info">
+          <h3>Ашкудишка Личи 300 тяг</h3>
+          <p>Шедевр современного инженерии со встроенным кальяном вместо подстаканников.</p>
+          <div class="price">$300,000</div>
+        </div>
       </div>
 
     </div>
@@ -44,12 +50,10 @@
 
       <div class="contact-card">
         <h3>Связь через форму</h3>
-
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true"
                 width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">
           Загрузка…
         </iframe>
-
       </div>
     </div>
   </div>
@@ -152,30 +156,41 @@
 
       <div class="car-card">
         <img src="anapovskiy_mazut.png" alt="Анапский мазут">
-        <div class="car-info"><h3>Анапский мазут</h3><p>Автомобиль премиум класса, дающий в рот BUGATTI.</p>
-        <div class="price">$420,000</div></div>
+        <div class="car-info">
+          <h3>Анапский мазут</h3>
+          <p>Автомобиль премиум класса, дающий в рот BUGATTI.</p>
+          <div class="price">$420,000</div>
+        </div>
       </div>
 
       <div class="car-card">
         <img src="slivka_sgrustnula.png" alt="Задумчивая слива">
-        <div class="car-info"><h3>Задумчивая слива</h3><p>BRAT and it’s the same but new color so it’s not.</p>
-        <div class="price">$444,444</div></div>
+        <div class="car-info">
+          <h3>Задумчивая слива</h3>
+          <p>BRAT and it’s the same but new color so it’s not.</p>
+          <div class="price">$444,444</div>
+        </div>
       </div>
 
       <div class="car-card">
         <img src="khokhloma.png" alt="Хохломская роспись">
-        <div class="car-info"><h3>Хохломская роспись</h3><p>Лимитированная расцветка — первая в компании. Кто успел — тот и съел.</p>
-        <div class="price">По договоренности</div></div>
+        <div class="car-info">
+          <h3>Хохломская роспись</h3>
+          <p>Лимитированная расцветка — первая в компании. Кто успел — тот и съел.</p>
+          <div class="price">По договоренности</div>
+        </div>
       </div>
 
       <div class="car-card">
         <img src="gzhel.png" alt="Гжель">
-        <div class="car-info"><h3>Гжель</h3><p>Первый лимитированный заказ для самой счастливой владелицы Мамаевой Марии.</p>
-        <div class="price">Цена по договоренности</div><div class="note">Кто успел — тот и съел.</div></div>
+        <div class="car-info">
+          <h3>Гжель</h3>
+          <p>Первый в нашей компании лимитированный заказ для самой счастливой владелицы Мамаевой Марии.</p>
+          <p class="note">Кто успел тот и съел</p>
+          <div class="price">Цена по договоренности</div>
+        </div>
       </div>
 
       <div class="car-card">
         <div class="smoke-container">
-          <img src="ashkudishka.png" alt="Ашкудишка Личи 300 тяг">
-          <div class="smoke"></div>
-        </div>
+          <img src="ashkudishka.
