--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ png" alt="Ашкудишка Личи 300 тяг">
 
 <script src="script.js"></script>
 </body>
-</html>
-<!DOCTYPE html>
+</html><!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
