--- a/index.html
+++ b/index.html
@@ -1,77 +1,4 @@
-png" alt="Ашкудишка Личи 300 тяг">
-          <div class="smoke"></div>
-        </div>
-        <div class="car-info">
-          <h3>Ашкудишка Личи 300 тяг</h3>
-          <p>Шедевр современного инженерии со встроенным кальяном вместо подстаканников.</p>
-          <div class="price">$300,000</div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="limited">
-      <div class="limited-title">Лимитированная серия</div>
-      <div id="timer"></div>
-    </div>
-
-  </div>
-</section>
-
-<section id="style" class="luxury-section">
-  <div class="container">
-    <h2>Создай уникальный стиль</h2>
-    <div class="style-grid">
-      <div class="color-panel">
-        <input type="color" id="colorWheel" value="#8b00ff">
-        <div class="sliders">
-          <label>Яркость<input type="range" id="brightness" min="0" max="200" value="100"></label>
-          <label>Насыщенность<input type="range" id="saturation" min="0" max="200" value="100"></label>
-        </div>
-        <button class="btn" id="randomColor">Случайный стиль</button>
-      </div>
-      <div class="car-preview">
-        <div class="preview-label">Предпросмотр</div>
-        <img id="previewCar" src="anapovskiy_mazut.png" alt="Preview">
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="contact" class="luxury-section">
-  <div class="container">
-    <h2>Контакты</h2>
-    <div class="contact-grid">
-      <div class="contact-card">
-        <h3>Связаться</h3>
-        <p>Телефон: +7#######</p>
-        <p>Адрес: ######</p>
-      </div>
-
-      <div class="contact-card">
-        <h3>Связь через форму</h3>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true"
-                width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">
-          Загрузка…
-        </iframe>
-      </div>
-    </div>
-  </div>
-</section>
-
-<div class="modal" id="modal">
-  <div class="modal-content">
-    <span class="close" id="closeModal">&times;</span>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true"
-            width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">
-      Загрузка…
-    </iframe>
-  </div>
-</div>
-
-<script src="script.js"></script>
-</body>
-</html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
@@ -190,6 +117,80 @@ png" alt="Ашкудишка Личи 300 тяг">
         </div>
       </div>
 
+      <!-- Правильный блок Ашкудишки -->
       <div class="car-card">
         <div class="smoke-container">
-          <img src="ashkudishka.
+                  <img src="ashkudishka.png" alt="Ашкудишка Личи 300 тяг">
+          <div class="smoke"></div>
+        </div>
+        <div class="car-info">
+          <h3>Ашкудишка Личи 300 тяг</h3>
+          <p>Шедевр современного инженерии со встроенным кальяном вместо подстаканников.</p>
+          <div class="price">$300,000</div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="limited">
+      <div class="limited-title">Лимитированная серия</div>
+      <div id="timer"></div>
+    </div>
+
+  </div>
+</section>
+
+<section id="style" class="luxury-section">
+  <div class="container">
+    <h2>Создай уникальный стиль</h2>
+    <div class="style-grid">
+      <div class="color-panel">
+        <input type="color" id="colorWheel" value="#8b00ff">
+        <div class="sliders">
+          <label>Яркость<input type="range" id="brightness" min="0" max="200" value="100"></label>
+          <label>Насыщенность<input type="range" id="saturation" min="0" max="200" value="100"></label>
+        </div>
+        <button class="btn" id="randomColor">Случайный стиль</button>
+      </div>
+      <div class="car-preview">
+        <div class="preview-label">Предпросмотр</div>
+        <img id="previewCar" src="anapovskiy_mazut.png" alt="Preview">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="contact" class="luxury-section">
+  <div class="container">
+    <h2>Контакты</h2>
+    <div class="contact-grid">
+      <div class="contact-card">
+        <h3>Связаться</h3>
+        <p>Телефон: +7#######</p>
+        <p>Адрес: ######</p>
+      </div>
+
+      <div class="contact-card">
+        <h3>Связь через форму</h3>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true"
+                width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">
+          Загрузка…
+        </iframe>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="modal" id="modal">
+  <div class="modal-content">
+    <span class="close" id="closeModal">&times;</span>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true"
+            width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">
+      Загрузка…
+    </iframe>
+  </div>
+</div>
+
+<script src="script.js"></script>
+</body>
+</html>
