--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
         </div>
       </div>
 
-      <!-- Правильный блок Ашкудишки -->
       <div class="car-card">
         <div class="smoke-container">
-<img src="ashkudishka.png" alt="Ашкудишка Личи 300 тяг">
+          <img src="ashkudishka.
+            png" alt="Ашкудишка Личи 300 тяг">
           <div class="smoke"></div>
         </div>
         <div class="car-info">
