--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
 
       <div class="car-card">
         <div class="smoke-container">
-          <img src="ashkudishka.
-            png" alt="Ашкудишка Личи 300 тяг">
+          <img src="ashkudishka.png" alt="Ашкудишка Личи 300 тяг">
           <div class="smoke"></div>
         </div>
         <div class="car-info">
@@ -194,3 +193,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
