--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <img src="khokhloma.png" alt="Хохломская роспись">
         <div class="car-info">
           <h3>Хохломская роспись</h3>
-          <p>Лимитированная расцветка — первая в компании. Кто успел — тот и съел.</p>
-          <div class="price">По договоренности</div>
+          <p>Лимитированная расцветка — первая в компании.</p>
+          <div class="price">$122,222</div>
         </div>
       </div>
 
@@ -113,7 +113,7 @@
           <h3>Гжель</h3>
           <p>Первый в нашей компании лимитированный заказ для самой счастливой владелицы Мамаевой Марии.</p>
           <p class="note">Кто успел тот и съел</p>
-          <div class="price">Цена по договоренности</div>
+          <div class="price">По договоренности</div>
         </div>
       </div>
 
@@ -193,4 +193,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
