--- a/index.html
+++ b/index.html
@@ -9,34 +9,112 @@
 <body>
 
 <header class="header">
-  <div class="container header-flex">
+  <div class="container">
     <div class="logo">СВО</div>
     <nav class="nav">
       <a href="#hero">Главная</a>
+      <a href="#specs">Характеристики</a>
+      <a href="#unique">Уникальность</a>
       <a href="#collection">Коллекция</a>
-      <a href="#reviews">Отзывы</a>
+      <a href="#style">Создай стиль</a>
       <a href="#contact">Контакты</a>
     </nav>
     <button class="btn" id="testDriveBtn">Записаться</button>
+    <div class="burger" id="burger"><span></span><span></span><span></span></div>
   </div>
 </header>
 
-<section id="hero" class="hero">
+<div class="mobile-menu" id="mobileMenu">
+  <a href="#hero">Главная</a>
+  <a href="#specs">Характеристики</a>
+  <a href="#unique">Уникальность</a>
+  <a href="#collection">Коллекция</a>
+  <a href="#style">Создай стиль</a>
+  <a href="#contact">Контакты</a>
+</div>
+
+<section id="hero" class="hero luxury-section">
   <div class="container hero-grid">
-    <div>
+    <div class="hero-text">
       <h1>ЭПОПЕЯ</h1>
-      <p>V10 · 2228 л.с. · 0–100 за 1,2 сек</p>
-      <button class="btn" id="testDriveBtn2">Тест-драйв</button>
+      <p class="subtitle">Самый мощный автомобиль. Двигатель V10 — 2228 л.с. Разгон 0–100 за 1,2 секунды.</p>
+      <div class="hero-buttons">
+        <button class="btn" id="testDriveBtn2">Тест-драйв</button>
+        <button class="btn ghost" id="contactBtn">Связаться</button>
+      </div>
     </div>
-    <img src="anapovskiy_mazut.png" alt="ЭПОПЕЯ">
+    <div class="hero-image">
+      <img src="anapovskiy_mazut.png" alt="Анапский мазут">
+    </div>
   </div>
 </section>
 
-<section id="collection" class="section">
+<section id="specs" class="luxury-section">
+  <div class="container">
+    <h2>Характеристики</h2>
+    <div class="spec-grid">
+      <div class="spec-card"><h3>Двигатель</h3><p>V10</p></div>
+      <div class="spec-card"><h3>Мощность</h3><p>2228 л.с.</p></div>
+      <div class="spec-card"><h3>Разгон</h3><p>0–100 за 1,2 секунды</p></div>
+      <div class="spec-card"><h3>Длина</h3><p>6 метров</p></div>
+      <div class="spec-card"><h3>Ширина</h3><p>3 метра</p></div>
+      <div class="spec-card"><h3>Класс</h3><p>Премиум. Дающий в рот BUGATTI</p></div>
+    </div>
+  </div>
+</section>
+
+<section id="unique" class="luxury-section">
+  <div class="container">
+    <h2>Уникальность</h2>
+    <p class="text">
+      СВО — Статус Вне Ограничений. Автомобиль премиум класса, дающий в рот BUGATTI.
+      Это не просто машина — это высказывание. Каждый автомобиль — лимитированная серия,
+      созданная для тех, кто живёт на скорости и не боится быть первым.
+    </p>
+  </div>
+</section>
+
+<section id="collection" class="luxury-section">
   <div class="container">
     <h2>Коллекция</h2>
 
-    <div class="grid">
+    <div class="car-grid">
+
+      <div class="car-card">
+        <img src="anapovskiy_mazut.png" alt="Анапский мазут">
+        <div class="car-info">
+          <h3>Анапский мазут</h3>
+          <p>Автомобиль премиум класса, дающий в рот BUGATTI.</p>
+          <div class="price">$420,000</div>
+        </div>
+      </div>
+
+      <div class="car-card">
+        <img src="slivka_sgrustnula.png" alt="Задумчивая слива">
+        <div class="car-info">
+          <h3>Задумчивая слива</h3>
+          <p>BRAT and it’s the same but new color so it’s not.</p>
+          <div class="price">$444,444</div>
+        </div>
+      </div>
+
+      <div class="car-card">
+        <img src="khokhloma.png" alt="Хохломская роспись">
+        <div class="car-info">
+          <h3>Хохломская роспись</h3>
+          <p>Лимитированная расцветка — первая в компании. Кто успел — тот и съел.</p>
+          <div class="price">По договоренности</div>
+        </div>
+      </div>
+
+      <div class="car-card">
+        <img src="gzhel.png" alt="Гжель">
+        <div class="car-info">
+          <h3>Гжель</h3>
+          <p>Первый в нашей компании лимитированный заказ для самой счастливой владелицы Мамаевой Марии.</p>
+          <p class="note">Кто успел тот и съел</p>
+          <div class="price">Цена по договоренности</div>
+        </div>
 
       <div class="card">
         <img src="ashkudishka.png" alt="Ашкудишка">
@@ -71,13 +149,13 @@
       <div class="review">
         <img src="review1.png" alt="Отзыв">
         <p>⭐⭐⭐⭐⭐<br>Bugatti больше не впечатляет</p>
-        <strong>Артём, Москва</strong>
+        <strong>Мария, Нижний Новгород</strong>
       </div>
 
       <div class="review">
         <img src="review2.png" alt="Отзыв">
         <p>⭐⭐⭐⭐⭐<br>Разгон быстрее мыслей</p>
-        <strong>Мария, СПб</strong>
+        <strong>Ирина, Мурманск</strong>
       </div>
     </div>
   </div>
@@ -106,4 +184,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
